    * Improved usability of the playlist layout editor dialog.
    * Duplicate unique file identifiers are now indicated in debug output,
      along with the paths of the files, when found instead of being silently
      ignored. This can help discover multiple copies of the same file or
      files which incorrectly have the same MusicBrainz unique identifier.

  BUGFIXES:
    * Cleaned up the Organize dialog to make it more usable. (BR 199574)
    * Made it harder to Move Files unintentionally. (BR 220716)
    * Returned "Organize Files" to the collection's context menu. (BR 215902)
    * Fixed Amarok Solid action for playing audio CDs working. (BR 209204)
    * Fixed crash with moving applets in the Context View. (BR 191918)
    * Fixed crash in KNotify. (BR 224673)
    * Fixed queue management with mouse. (BR 217153)
    * Fixed playback of some streams causing the progress slider to show 
      garbage track length and position values like -322:0-35:0-59.
    * Prevent a crash when loading PLS playlists with invalid filepaths.
    * Fixed scrolling crashes with the cover manager. (BR 224000)
    * Fixed a bug that was deleting files when using "Move to collection"
      from the file browser. (BR 217002)
    * Allow fetching of album covers in the unified view. (BR 220873)
    * Lyrics applet: Fixed scrollbar incorrectly displayed (and sometimes not
      at all) for long lyrics under KDE 4.4. (BR 222260)
    * Fixed bug in Photos applet that made it break with translated versions
      of Amarok. Patch by Bellegarde Cédric <gnumdk@gmail.com>. (BR 222566)
    * Lyrics applet: Fixed saving and restoring font styles. (BR 222277)
    * Lyrics applet: Fixed a bug where sometimes suggested URLs are not
      cleared when switching tracks.
    * Fixed playlist layout editor blocking control of Amarok. (BR 220825)
    * Fixed moodbar in progress slider not correctly updating after moodbar
      style change (BR 220695)